# chip8emulator

./: CMakeLists.txt  ChipCPU.c  ChipCPU.h  README.md  main.c  renderer.c  renderer.h
CMAKE/: FindSDL2TTF.cmake
